# ExoMy_Software

docker/: Dockerfile  entrypoint.sh  run_exomy.sh
exomy/: CMakeLists.txt  package.xml  setup.py
exomy/exomy/: battery_publisher.py  cpu_temperature_node.py  gamepad_parser_node.py  locomotion_modes.py  motor_node.py  motors.py  object_detection_node.py  robot_node.py  rover.py  storage_capacity_node.py
exomy/launch/: exomy.launch.py
exomy/scripts/: config_drive_motor_neutral.py  config_motor_pins.py  config_steer_motor_neutral.py  motor_test.py  stop_motors.py
exomy_msgs/msg/: MotorCommands.msg  RoverCommand.msg  Screen.msg
object_detection/: CMakeLists.txt  package.xml
object_detection/config/: coco.names
object_detection/src/: object_detection_node.cpp
